--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@ a:hover {
     opacity: 1;
 }
 
+a.img {
+  margin: 0;
+  padding: 0;
+}
+
 .grid {
     width: 100%;
     display: flex;
@@ -46,7 +51,7 @@ hr {
 
 section h3.title{
     text-transform: capitalize;
-    font: bold 32px "Open Sans", sans-serif;
+    font: bold 32px 'Lobster', cursive;
     margin-bottom: 30px;
     text-align: center;
 }
@@ -57,6 +62,7 @@ section p{
     padding: 0 20px;
     margin-bottom: 30px;
     text-align: center;
+    font-family: monospace;
 }
 
 
@@ -71,17 +77,29 @@ header {
     opacity: 0;
     background-color: rgba(0, 0, 0, 0.801);
     padding: 35px 100px 35px 100px;
-
 }
 
 header h2{
-    font-family: "Open Sans", sans-serif;
-    font-style: italic;
+    font-family: monospace;
     opacity: .5;
 }
 
 header a{
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    padding: 4px 20px 4px 20px;
+    margin: -10px;
+    background-color: #ffe6e6;
+}
+
+header a.logo{
+  padding: 7px;
+  margin: 0;
+  background-color: grey;
+  font-family: 'Lato', sans-serif;
+  opacity: 0.5;
+  color: white;
+  text-transform: uppercase;
 }
 
 header nav{
@@ -106,7 +124,7 @@ a.btn {
     text-align: center;
     background-color: white;
     opacity: .8;
-    padding: 10px;;
+    padding: 10px;
 }
 
 section {
@@ -138,12 +156,12 @@ section {
 }
 
 .hero h1{
-    font: bold 60px "Open Sans", sans-serif;
+    font: bold 40px 'Raleway', sans-serif;
     margin-bottom: 15px;
 }
 
 .hero h3 {
-    font: normal 28px "Open Sans", sans-serif;
+    font: normal 20px 'Raleway', sans-serif;
     margin-bottom: 40px;
 }
 
@@ -172,10 +190,26 @@ section {
     background-position: center;
 }
 
-destinations .grid li.small {
-    flex-basis: 30%;
+.projects .grid li.small {
+  background-image: url(https://images.unsplash.com/photo-1494526585095-c41746248156?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fd170b4cebb0b97e6337529754defcf7&auto=format&fit=crop&w=1050&q=80);
+  width: 30%;
+  height: 400px;
 }
 
-destinations .grid li.large {
-  flex-basis: 70%;
+.projects .grid li.large {
+ background-image: url(https://images.unsplash.com/photo-1451934403379-ffeff84932da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bb1d557af01c03a9390e61fab60cfd6d&auto=format&fit=crop&w=942&q=80);
+ width: 70%;
+ height: 400px;
+}
+
+.projects .grid li.small2 {
+  background-image: url(https://images.unsplash.com/photo-1482192505345-5655af888cc4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a14ca13b83f7bce82764a45d13576418&auto=format&fit=crop&w=1100&q=80);
+  width: 30%;
+  height: 400px;
+}
+
+.projects .grid li.large2 {
+ background-image: url(https://images.unsplash.com/photo-1413752567787-baa02dde3c65?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=00dab0342c1b6498228d16e4a7d82ad3&auto=format&fit=crop&w=1055&q=80);
+ width: 70%;
+ height: 400px;
 }
