--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,11 @@ hr {
     background-color: #3f51b5;
     border: 0;
     margin-bottom: 50px;
-
 }
 
 section h3.title{
     text-transform: capitalize;
-    font: bold 32px 'Lobster', cursive;
+    font: bold 50px 'Lobster', cursive;
     margin-bottom: 30px;
     text-align: center;
 }
@@ -62,7 +61,7 @@ section p{
     padding: 0 20px;
     margin-bottom: 30px;
     text-align: center;
-    font-family: monospace;
+    font-family: sans-serif;
 }
 
 
@@ -86,7 +85,8 @@ header h2{
 
 header a{
     font-family: 'Raleway', sans-serif;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: bold;
     padding: 4px 20px 4px 20px;
     margin: -10px;
     background-color: #ffe6e6;
@@ -192,24 +192,99 @@ section {
 
 .projects .grid li.small {
   background-image: url(https://images.unsplash.com/photo-1494526585095-c41746248156?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fd170b4cebb0b97e6337529754defcf7&auto=format&fit=crop&w=1050&q=80);
-  width: 30%;
   height: 400px;
+  flex-basis: 30%;
 }
 
 .projects .grid li.large {
  background-image: url(https://images.unsplash.com/photo-1451934403379-ffeff84932da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bb1d557af01c03a9390e61fab60cfd6d&auto=format&fit=crop&w=942&q=80);
- width: 70%;
+ flex-basis: 70%;
  height: 400px;
 }
 
 .projects .grid li.small2 {
   background-image: url(https://images.unsplash.com/photo-1482192505345-5655af888cc4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a14ca13b83f7bce82764a45d13576418&auto=format&fit=crop&w=1100&q=80);
-  width: 30%;
+  flex-basis: 30%;
   height: 400px;
 }
 
 .projects .grid li.large2 {
  background-image: url(https://images.unsplash.com/photo-1413752567787-baa02dde3c65?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=00dab0342c1b6498228d16e4a7d82ad3&auto=format&fit=crop&w=1055&q=80);
- width: 70%;
+ flex-basis: 70%;
  height: 400px;
+}
+
+section:not(.hero):nth-child(even){
+  background-color: #f5f5f5;
+}
+
+/* Packages section */
+.packages .grid li {
+  padding: 50px;
+  flex-basis: 50%;
+  text-align: center;
+}
+
+.packages .grid li i {
+  color: #ff6666;
+}
+
+.packages .grid li h4{
+  font-size: 30px;
+  margin: 25px 0;
+}
+
+.packages .grid li p {
+  font-family: sans-serif;
+}
+
+.packages p {
+  font-family: sans-serif;
+}
+
+/* Contact Section */
+.contact form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 60%;
+}
+
+.contact form .btn {
+  padding: 18px 42px;
+}
+
+.contact form input {
+  padding: 15px;
+  margin-right: 30px;
+  font-size: 18px;
+  color: #555;
+  flex: 1;
+}
+
+/*Footer */
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #607d8b;
+  color: #fff;
+  padding: 20px 0;
+}
+
+footer ul {
+  display: flex;
+}
+
+footer ul li {
+  margin-left: 16px;
+  background-color: #607d8b;
+}
+
+footer p {
+  text-transform: uppercase;
+  font-size: 14px;
+  opacity: 0.5;
+  align-self: center;
 }
