--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,11 @@ section p{
     font-family: sans-serif;
 }
 
+@media (max-width: 800px) {
+    section {
+        padding: 50px 20px;
+    }
+}
 
 /* header styles */
 
@@ -134,6 +139,17 @@ section {
     padding: 100px 80px;
 }
 
+@media (max-width: 800px){
+    header {
+        padding: 20px 50px;
+        flex-direction: column;
+    }
+
+header h2 {
+    margin-bottom: 15px;
+    }
+}
+
 /*Hero styles */
 .hero {
     position: relative;
@@ -181,6 +197,23 @@ section {
     }
 }
 
+@media (max-width: 800px){
+    .hero {min-height: 600px;
+    }
+
+    .hero h1{
+        font-size: 48px;
+    }
+
+    .hero h3{
+        font-size: 24px;
+    }
+
+    .hero a.btn {
+        padding: 15px 40px;
+    }
+}
+
 /* projects section */
 .projects .grid li{
     height: 350px;
@@ -218,7 +251,29 @@ section:not(.hero):nth-child(even){
   background-color: #f5f5f5;
 }
 
+@media (max-width: 1100px) {
+    .destinations .grid li.small, 
+    .destinations .grid li.small1, 
+    .destinations .grid li.large, 
+    .destinations .grid li.large1 {
+        flex-basis: 50%;
+    } 
+}
+
+@media (max-width: 800px) {
+    .destinations .grid li.small, 
+    .destinations .grid li.small1, 
+    .destinations .grid li.large, 
+    .destinations .grid li.large1 {
+        flex-basis: 100%;
+    } 
+}
+
 /* Packages section */
+.packages ul {
+    list-style-type: none;
+}
+
 .packages .grid li {
   padding: 50px;
   flex-basis: 50%;
@@ -242,6 +297,12 @@ section:not(.hero):nth-child(even){
   font-family: sans-serif;
 }
 
+@media (max-width: 800px){
+    .packages .grid li {
+        flex-basis: 100%;
+        padding: 20px;
+    }
+}
 /* Contact Section */
 .contact form {
   display: flex;
@@ -253,6 +314,8 @@ section:not(.hero):nth-child(even){
 
 .contact form .btn {
   padding: 18px 42px;
+  background-color: rgb(55, 55, 63);
+  color: white;
 }
 
 .contact form input {
@@ -261,6 +324,13 @@ section:not(.hero):nth-child(even){
   font-size: 18px;
   color: #555;
   flex: 1;
+}
+
+@media (max-width: 1000px){
+    .contact form input {
+        flex-basis: 100%;
+        margin: 0 0 20px 0;
+    }
 }
 
 /*Footer */
@@ -275,6 +345,7 @@ footer {
 
 footer ul {
   display: flex;
+  list-style-type: none;
 }
 
 footer ul li {
@@ -287,4 +358,23 @@ footer p {
   font-size: 14px;
   opacity: 0.5;
   align-self: center;
+}
+
+footer a {
+    background: none;
+}
+
+@media (max-width: 1100px){
+    footer {
+        flex-direction: column;
+    }
+
+    footer p {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    footer ul li{
+        margin: 0 8px;
+    }
 }
