--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ section p{
 }
 
 @media (max-width: 800px) {
+   body {
+        width: 100%;
+    } 
+    
     section {
         padding: 50px 20px;
     }
