--- a/css/style.css
+++ b/css/style.css
@@ -210,15 +210,15 @@ header h2 {
 }
 
 @media (max-width: 800px){
-    .hero {min-height: 600px;
+    .hero {max-height: 600px;
     }
 
     .hero h1{
-        font-size: 48px;
+        font-size: 20px;
     }
 
     .hero h3{
-        font-size: 24px;
+        font-size: 18px;
     }
 
     .hero a.btn {
