--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ header h2 {
     }
 }
 
-@media (max-width: 800px){
+@media screen and (max-width: 800px){
     .hero {max-height: 600px;
     }
 
