--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ footer a {
         }
   }
     
-   @medi  screen and (max-width: 800px) {
+   @media screen and (max-width: 800px) {
        body {
             width: 100%;
         } 
