--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,20 @@ header h2 {
     margin-bottom: 15px;
     }
 }
+    
+    @media screen and (max-width: 500px) {
+   header {
+        padding: 10px 20px;
+        flex-direction: column;
+    } 
+    
+    
+   header.h1 {
+        font-size: 15px;
+}
+    header.a {
+        font-size: 12px;
+    }
 
 /*Hero styles */
 .hero {
